@@ -25,6 +25,7 @@
 __revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
 
 import os
+import string
 import sys
 import TestSCons
 
@@ -104,5 +105,19 @@ test.run(chdir = 'three', arguments = "f1.out f2.out f3.out",
 test.fail_test(test.read(['three', 'f1.out']) != "three/f1.in\n")
 test.fail_test(test.read(['three', 'f2.out']) != "three/f2.in\n")
 test.fail_test(os.path.exists(test.workpath('f3.out')))
+
+test.write('SConstruct', """
+env=Environment()
+if env['PLATFORM'] == 'posix':
+    from SCons.Platform.posix import fork_spawn
+    env['SPAWN'] = fork_spawn
+env['ENV']['PATH'] = ''
+env.Command(target='foo.out', source=[], action='not_a_program')
+""")
+
+test.run(status=2, stderr=None)
+err = test.stderr()
+test.fail_test(string.find(err, 'Exception') != -1 or \
+               string.find(err, 'Traceback') != -1)
 
 test.pass_test()
